Kubernetes/task2/dash/service_dash.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
  resourceVersion: "29398"
  selfLink: /api/v1/namespaces/kube-system/services/kubernetes-dashboard

spec:
  clusterIP: 10.110.38.176
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
