Kubernetes/task2/dash/dash_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system


spec:
  rules:
  - host: my.k8s.local
    tls:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
